# rust-for-beginners

./: .gitignore  ;
activities/: Cargo.toml  closures.rs
builder-patterns/: Cargo.toml
builder-patterns/src/: error.rs  main.rs  prelude.rs  task.rs  web.rs
rust-book/branches/src/: main.rs
rust-book/concurrency/src/: main.rs
rust-book/convert_temperatures/src/: main.rs
rust-book/functions/src/: main.rs
rust-book/guessing_game/src/: main.rs
rust-book/loops/src/: main.rs
rust-book/making_requests/: Cargo.toml
rust-book/making_requests/src/: main.rs
rust-book/minigrep/: output.txt
rust-book/minigrep/src/: lib.rs  main.rs
rust-book/ownership/src/: main.rs
rust-book/twelve_days_of_christmas/src/: main.rs
rust-book/variables/src/: main.rs
rust-book/web_server/: 404.html  hello.html
rust-book/web_server/src/: lib.rs  main.rs
rust-tutorials-coding-and-crypto/blockchain-info-app/: .env  Cargo.toml
rust-tutorials-coding-and-crypto/blockchain-info-app/src/: bc_address.rs  bc_info.rs  bc_status.rs  main.rs
rust-tutorials-coding-and-crypto/send-bitcoin/: Cargo.toml
rust-tutorials-coding-and-crypto/send-bitcoin/src/: main.rs
