[package]
name = "blockchain-info-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0" # .env vars
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
tokio = { version = "1.25.0", features = ["full"] }
serde = "1.0.152" # Convert JSON into Structs
serde_derive = "1.0.152"
serde_json = "1.0.91"

